<resources>
    <string name="app_name">AquaNova</string>
    <string name="insira_seu_cep">Insira seu CEP</string>
    <string name="data">Data</string>
    <string name="projeto_gua">Projeto Água</string>
    <string name="selecione_a_data">selecione uma data</string>
    <string name="report_description">Aqui você poder denunciar um incidente diretamente ao SAAE</string>
    <string name="cep">CEP</string>
    <string name="nome_opcional">Nome (opcional)</string>
    <string name="descricao">Descrição</string>
    <string name="enviar">Enviar</string>
    <string name="anexos_opcional">Anexos (opcional)</string>
    <string name="localizacao_manual">Adicionar localização manual</string>
    <string name="reportar_erro">Reportar Erro</string>
    <string name="whatsapp_do_saae">Whatsapp do SAAE</string>
    <string name="site_do_saae">Site do SAAE</string>
    <string name="whatsapp_da_prefeitura">Whatsapp da prefeitura</string>
    <string name="site_da_prefeitura">Site da prefeitura</string>
    <string name="contatos">Contatos:</string>
    <string name="notificar_not_cias">Notificar notícias</string>
    <string name="notificar_avisos">Notificar avisos</string>
    <string name="notificar_emerg_ncias">Notificar emergências</string>
    <string name="configuracoes">Configurações</string>
    <string name="in_cio">Início</string>
    <string name="aqua_nova">Aqua Nova</string>
    <string name="botao_de_atualizar">Botão de atualizar</string>
    <string name="tentar_novamente">Tentar novamente</string>
    <string name="noticias">Notícias</string>
    <string name="botao_configuracoes">Botão para ir às configurações</string>
    <string name="botao_denuncias">Botão para ir às denúncias</string>
    <string name="botao_noticias">Botão para ir às notícias</string>
    <string name="botao_recarregar_tela">Botão para recarregar a tela</string>
    <string name="botao_inicio">Botão para ir à tela de início</string>
    <string name="tirar_uma_foto">Tirar uma foto</string>
    <string name="escolher_uma_foto">Escolher uma foto</string>
</resources>