<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.SettingsActivity"
    tools:ignore="ExtraText">


    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/projeto_gua"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/nav_icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp">


        <ImageButton
            android:id="@+id/icon_home"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@drawable/ic_icone_report" />

        <ImageButton
            android:id="@+id/icon_news"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@drawable/ic_icone_report" />

        <ImageButton
            android:id="@+id/icon_report"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@drawable/ic_icone_report" />

        <ImageButton
            android:id="@+id/icon_settings"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@drawable/ic_icone_report" />
    </LinearLayout>

    <TextView
        android:id="@+id/settings_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nav_icons"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/configuracoes"
        android:textAlignment="center"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_info"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/switches"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/notificar_emerg_ncias"
                    android:textSize="20sp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/notificar_avisos"
                    android:textSize="20sp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/notificar_not_cias"
                    android:textSize="20sp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>

            <EditText
                android:id="@+id/settings_cep"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/switches"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:autofillHints="postal_code"
                android:hint="@string/cep"
                android:inputType="number"
                android:maxLength="8" />

            <Button
                android:id="@+id/manual_cep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_cep"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="25dp"
                android:text="@string/localizacao_manual"
                android:textSize="13sp" />

            <LinearLayout
                android:id="@+id/contact_buttons"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/manual_cep"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contatos"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/site_da_prefeitura" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whatsapp_da_prefeitura" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/site_do_saae" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whatsapp_do_saae" />

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_buttons"
                android:layout_centerHorizontal="true"
                android:text="@string/reportar_erro" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>