<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.ReportActivity"
    tools:ignore="ExtraText">


    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/projeto_gua"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/nav_icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp">


        <ImageButton
            android:id="@+id/icon_home"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@drawable/ic_icone_report" />

        <ImageButton
            android:id="@+id/icon_news"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@drawable/ic_icone_report" />

        <ImageButton
            android:id="@+id/icon_report"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@drawable/ic_icone_report" />

        <ImageButton
            android:id="@+id/icon_settings"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@drawable/ic_icone_report" />
    </LinearLayout>

    <TextView
        android:id="@+id/report_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nav_icons"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/report_description"
        android:textAlignment="center"
        android:textSize="22sp" />

    <EditText
        android:autofillHints="name"
        android:id="@+id/report_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/report_info"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:hint="@string/nome_opcional"
        android:inputType="textPersonName"
        android:maxLength="32"
        android:singleLine="true"
        android:textAlignment="textStart" />

    <EditText
        android:id="@+id/report_cep"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/report_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:autofillHints="postal_code"
        android:hint="@string/cep"
        android:inputType="number"
        android:maxLength="8" />

    <EditText
        android:autofillHints="null"
        android:id="@+id/report_description"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_below="@id/report_cep"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:gravity="start"
        android:hint="@string/descricao"
        android:inputType="textShortMessage"
        android:maxLength="128"
        android:textAlignment="textStart" />


    <LinearLayout
        android:id="@+id/attachment_bar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/report_description"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginBottom="60dp">

        <TextView
            android:id="@+id/report_attach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anexos_opcional"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/add_file"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp" />

        <ImageButton
            android:id="@+id/add_camera"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp" />

        <ImageButton
            android:id="@+id/add_help"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp" />

    </LinearLayout>

    <Button
        android:layout_below="@id/attachment_bar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/enviar" />


</RelativeLayout>