<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewsActivity"
    tools:ignore="ExtraText">


    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:text="@string/projeto_gua"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/nav_icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp">


        <ImageView
            android:id="@+id/icon_home"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:src="@drawable/ic_icone_report" />

        <ImageView
            android:id="@+id/icon_news"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:src="@drawable/ic_icone_report" />

        <ImageView
            android:id="@+id/icon_report"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:src="@drawable/ic_icone_report" />

        <ImageView
            android:id="@+id/icon_settings"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:src="@drawable/ic_icone_report" />

    </LinearLayout>

    <EditText
        android:id="@+id/insert_cep"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/nav_icons"
        android:layout_centerHorizontal="true"
        android:hint="@string/insira_seu_cep"
        android:inputType="number"
        android:maxLength="8"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/insira_seu_cep" />

    <LinearLayout
        android:id="@+id/date_and_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/insert_cep"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <EditText
            android:id="@+id/select_date"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/data"
            android:textAlignment="center"
            android:layout_weight="1"
            android:inputType="date"/>



        <Button
            android:id="@+id/refresh_button"
            android:text="R"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>


    <ScrollView
        android:id="@+id/news_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_and_button"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp">


    </ScrollView>


</RelativeLayout>